correct spec.ts files

--- a/src/app/components/land-registration/land-registration.component.html
+++ b/src/app/components/land-registration/land-registration.component.html
@@ -2,19 +2,18 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-      <div class="crd">
-        <!-- Material form login -->
-        <mdb-card>
+      <div class="card">
+       
 
-          <mdb-card-header class="info-color white-text text-center py-4">
-            <h5>
+          <div class="card-header text-center bg-info">
+            <h5 class="text-light">
               <strong>Land Registration</strong>
             </h5>
-          </mdb-card-header>
+          </div>
 
 
           <!--Card content-->
-          <mdb-card-body class="px-lg-5 pt-0">
+          <div class="card-body">
 
             <!-- Form -->
             <form style="color: #757575;" (ngSubmit)="onSubmit()" #f="ngForm">
@@ -54,10 +53,7 @@
             </form>
             <!-- Form -->
 
-          </mdb-card-body>
-
-        </mdb-card>
-        <!-- Material form login -->
+          </div>
 
       </div>
 
