--- a/src/app/components/change-owner/change-owner.component.html
+++ b/src/app/components/change-owner/change-owner.component.html
@@ -2,19 +2,17 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-      <div class="crd">
-        <!-- Material form login -->
-        <mdb-card>
+      <div class="card">
 
-          <mdb-card-header class="info-color white-text text-center py-4">
-            <h5>
-              <strong>Change Owner</strong>
+          <div class="card-header text-center bg-info">
+            <h5 class="text-light">
+              <strong>Change owner</strong>
             </h5>
-          </mdb-card-header>
+          </div>
 
 
           <!--Card content-->
-          <mdb-card-body class="px-lg-5 pt-0">
+          <div class="card-body">
 
             <!-- Form -->
             <form  style="color: #757575;" (ngSubmit)="onSubmit()" #f="ngForm">
@@ -48,10 +46,7 @@
             </form>
             <!-- Form -->
 
-          </mdb-card-body>
-
-        </mdb-card>
-        <!-- Material form login -->
+          </div>
 
       </div>
 
