--- a/src/app/components/create-ad/create-ad.component.html
+++ b/src/app/components/create-ad/create-ad.component.html
@@ -3,17 +3,16 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <!-- Material form register -->
-      <div class="crd">
-        <mdb-card>
+      <div class="card">
 
-          <mdb-card-header class="info-color white-text text-center py-4">
-            <h5>
+          <div class="card-header text-center bg-info">
+            <h5 class="text-light">
               <strong>Create Advertisment</strong>
             </h5>
-          </mdb-card-header>
+          </div>
 
           <!--Card content--> 
-          <mdb-card-body class="px-lg-5 pt-0">
+          <div class="card-body">
 
             <!-- Form -->
             <form style="color: #757575;" (ngSubmit)="onSubmit()" #f="ngForm">
@@ -78,10 +77,8 @@
             </form>
             <!-- Form -->
 
-          </mdb-card-body>
-
-        </mdb-card>
-        <!-- Material form register -->
+          </div>
+          
       </div>
 
     </div>
