--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <a class="nav-link waves-light" routerLink="/changeOwner" mdbWavesEffect>Change-Owner</a>
         </li>
         <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
+          <a class="nav-link waves-light" routerLink="/divideLand" mdbWavesEffect>Divide-Land</a>
+        </li>
+        <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
           <a class="nav-link waves-light" routerLink="/users" mdbWavesEffect>Users</a>
         </li>
         <li class="nav-item" *ngIf="this.userService.user==='admin'" routerLinkActive="active">
@@ -39,7 +42,7 @@
         <li class="nav-item" *ngIf="this.userService.user==='user'" routerLinkActive="active">
           <a class="nav-link waves-light" routerLink="/myAds" mdbWavesEffect>My-Ads</a>
         </li>
-
+        
       </ul>
 
       <div *ngIf="this.userService.user">
