--- a/src/app/components/my-lands/my-lands.component.html
+++ b/src/app/components/my-lands/my-lands.component.html
@@ -8,6 +8,8 @@
                 id:  {{land.id}}
                 <br/>
                 registered time: {{land.regTime}}
+                <br/>
+                status: {{land.status}}
               </li>
           </div>
           <div *ngIf="lands === undefined || lands.length == 0" >
